<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Gestionnaire de parcelles</string>
    <string name="action_settings">Paramétres</string>
    <string name="images_folder">ParcelsImages</string>

    <!-- Action bar -->
    <string name="action_parcel">Parcelles</string>
    <string name="action_converter">Convertisseur</string>
    <string name="action_command">Commande</string>
    <string name="action_control">Contrôle</string>
    <string name="action_add_parcel">Parcelle</string>
    <string name="action_show">Afficher</string>
    <string name="action_edit">Modifier</string>
    <string name="action_delete">Supprimer</string>

    <!-- Buttons labels -->
    <string name="btn_label_add_parcel">Ajouter</string>
    <string name="btn_label_choice_parcel">Choix parcelle</string>
    <string name="btn_label_go_command">Commande</string>
    <string name="btn_label_command_control">Contrôle</string>
    <string name="btn_label_command_parcels">Parcelles</string>
    <string name="btn_list_info">Image affichage infos parcelle</string>
    <string name="btn_take_picture">Prendre une Photo</string>
    <string name="btn_get_pos">Coordonnées actuels</string>
    <string name="btn_show_pos">Carte</string>
    <string name="btn_label_update_parcel">Modifier</string>

    <!-- Titles -->
    <string name="title_activity_add">Ajout parcelle</string>
    <string name="title_activity_command">Commande</string>
    <string name="title_activity_control">Controle</string>
    <string name="title_activity_converter">Convertisseur</string>
    <string name="title_activity_info">Parcelle</string>
    <string name="title_header_parcel">Parcelles</string>
    <string name="title_add_parcel">Ajouter Parcelle</string>
    <string name="title_activity_localisation">Localisation</string>
    <string name="img_list_parcel">Image de la parcelle</string>

    <!-- Labels -->
    <string name="label_parcel_name">Nom :</string>
    <string name="label_parcel_image">Image de la parcelle.</string>
    <string name="label_parcel_actual_culture">Culture :</string>
    <string name="label_parcel_previous_culture">Culture précédente :</string>
    <string name="label_parcel_surface">Surface :</string>
    <string name="label_parcel_address">Adresse :</string>
    <string name="label_parcel_latitude">Latitude :</string>
    <string name="label_parcel_longitude">Longitude :</string>
    <string name="label_parcel_address">Adresse :</string>
    <string name="label_converter_density">Densité de semis :</string>
    <string name="label_converter_density_unit">grains/m²</string>
    <string name="label_converter_pmg">PMG :</string>
    <string name="label_converter_pmg_unit">g</string>
    <string name="label_converter_weight">Poids de semence nécessaires :</string>
    <string name="label_converter_weight_unit">Kg/ha</string>
    <string name="label_control_density">Densité de semis :</string>
    <string name="label_control_density_unit">grains/m²</string>
    <string name="label_control_gap">Ecartement :</string>
    <string name="label_control_gap_unit">cm</string>
    <string name="label_control_ranks">Nombre de rangs / m²</string>
    <string name="label_control_ranks_unit">rangs/m²</string>
    <string name="label_control_grains">Nombre de grains / m²</string>
    <string name="label_control_grains_unit">grains/m²</string>
    <string name="label_command_weight">Poids de semences nécessaires :</string>
    <string name="label_command_weight_unit">Kg/ha</string>
    <string name="label_command_surface">Surface :</string>
    <string name="label_command_surface_unit">ha</string>
    <string name="label_command_packaging">Conditionnement :</string>
    <string name="label_command_packaging_unit">Kg/sac</string>
    <string name="label_command_order">Nombre à commander :</string>
    <string name="label_command_bags">sacs</string>

</resources>