<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <!-- Converter activity layout. -->


    <!-- Label for the converter density. -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_converter_density" />

    <!-- Sub layout for the converter density. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:orientation="horizontal" >

        <!-- Converter density. -->

        <EditText
            android:id="@+id/tf_converter_density"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" >
        </EditText>

        <!-- Converter density unit. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_converter_density_unit" />
    </LinearLayout>

    <!-- Label for the converter PMG. -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:text="@string/label_converter_pmg" />

    <!-- Sub layout for the converter PMG. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:orientation="horizontal" >

        <!-- PMG. -->

        <EditText
            android:id="@+id/tf_converter_pmg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" >
        </EditText>

        <!-- PMG unit. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_converter_pmg_unit" />
    </LinearLayout>

    <!-- Label for the converter weight. -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:text="@string/label_converter_weight" />

    <!-- Sub layout for the converter weight. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:orientation="horizontal" >

        <!-- Converter weight. -->

        <TextView
            android:id="@+id/tv_converter_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- Converter weight unit. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_converter_weight_unit" />
    </LinearLayout>

    <!-- Sub layout for the buttons. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
       	android:layout_marginTop="@dimen/activity_elements_margin"
        android:orientation="horizontal" >

        

        <!-- Button to go into command view. -->

        <Button
            android:id="@+id/btn_converter_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_go_command" />
    </LinearLayout>

</LinearLayout>